--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.7.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
